--- a/soshine/templates/ABClistDiv.html
+++ b/soshine/templates/ABClistDiv.html
@@ -120,7 +120,7 @@
     <div id="panel-element-demo-Dalian" class="panel-collapse collapse">
         <div class="blocklist-heading">
             <span id="Demo_Area_Dalian_P" class="glyphicon glyphicon-plane" onclick=""></span>
-            <span id="Demo_Area_Dalian_P_outline">大连机场</span>
+            <span id="Demo_Area_Dalian_P_outline">大连机场(下拉选择显示范围)</span>
             <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
                   data-target="#panel-element-demo-Dalian_P" style="float: right"></span>
         </div>
