--- a/soshine/templates/IntroDiv.html
+++ b/soshine/templates/IntroDiv.html
@@ -1,7 +1,25 @@
 <div class="intro" id="sysintro" >
-    <p>
-        功能介绍
-    </p>
+    <h4>
+         单击列表跳转至该地区视野。
+    </h4>
+    <ul>
+        <li>单击第一级列表显示地区</li>
+        <li>单击第二级列表显示区域（eg.林班或农场)</li>
+        <li>单击第三级列表显示区划（eg.小班或农田）</li>
+    </ul>
+    <h5>
+         图标含义：
+    </h5>
+    <ul>
+        <li><span class="glyphicon glyphicon-map-marker"></span>：无数据，单击跳转地区信息图</li>
+        <li><span class="glyphicon glyphicon-fullscreen"></span>：有数据，单击跳转地区高清图</li>
+        <li><span class="glyphicon glyphicon-tree-conifer"></span>：林业项目</li>
+        <li><span class="glyphicon glyphicon-leaf"></span>：林业项目数据</li>
+        <li><span class="glyphicon glyphicon-info-sign"></span>：林业项目功能</li>
+        <li><span class="glyphicon glyphicon-plane"></span>：航线规划项目</li>
+        <li><span class="glyphicon glyphicon-send"></span>：航线规划等高线数据</li>
+        <li><span class="glyphicon glyphicon-exclamation-sign"></span>：航线规划信息</li>
+    </ul>
 </div>
 
 <div class="intro"  id="Aintro" style="display:none">
@@ -116,15 +134,15 @@
 <div class="intro"  id="Cintro00010001" style="display:none">
     <div class="tabbable" id="tabs-00010001">
         <ul class="nav nav-tabs">
-            <li>
+            <li class="active">
                  <a href="#panel-00010001intro" data-toggle="tab">小班信息</a>
             </li>
-            <li class="active">
+            <li>
                  <a href="#panel-00010001loc" data-toggle="tab">数据报告</a>
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane" id="panel-00010001intro">
+            <div class="tab-pane active" id="panel-00010001intro">
                 <table border="1" width="100%">
 					<tr><td>林班</td><td>0001</td></tr>
                     <tr><td>小班</td><td>0001</td></tr>
@@ -153,7 +171,7 @@
                     <tr><td>百分比</td><td>0.00048</td></tr>
                 </table>
             </div>
-            <div class="tab-pane active" id="panel-00010001loc">
+            <div class="tab-pane" id="panel-00010001loc">
                <table border="1" width="100%">
                     <tr><th>ID</th><th>经纬度</th><th>范围</th><th>株树</th></tr>
 					<tr><td>1</td><td>114.20018, 23.12273</td><td>5m</td><td>1</td></tr>
@@ -169,15 +187,15 @@
 <div class="intro"  id="Cintro00010002" style="display:none">
     <div class="tabbable" id="tabs-00010002">
         <ul class="nav nav-tabs">
-            <li>
+            <li class="active">
                  <a href="#panel-00010002intro" data-toggle="tab">小班信息</a>
             </li>
-            <li class="active">
+            <li>
                  <a href="#panel-00010002loc" data-toggle="tab">数据报告</a>
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane" id="panel-00010002intro">
+            <div class="tab-pane active" id="panel-00010002intro">
                 <table border="1" width="100%">
 					<tr><td>林班</td><td>0001</td></tr>
                     <tr><td>小班</td><td>0002</td></tr>
@@ -206,7 +224,7 @@
                     <tr><td>百分比</td><td>0.00048</td></tr>
                 </table>
             </div>
-            <div class="tab-pane active" id="panel-00010002loc">
+            <div class="tab-pane" id="panel-00010002loc">
                <table border="1" width="100%">
                     <tr><th>ID</th><th>经纬度</th><th>范围</th><th>株树</th></tr>
 					<tr><td>1</td><td>114.1 23.2</td><td>5m</td><td>1</td></tr>
@@ -222,15 +240,15 @@
 <div class="intro"  id="Cintro00010003" style="display:none">
     <div class="tabbable" id="tabs-00010003">
         <ul class="nav nav-tabs">
-            <li>
+            <li class="active">
                  <a href="#panel-00010003intro" data-toggle="tab">小班信息</a>
             </li>
-            <li class="active">
+            <li>
                  <a href="#panel-00010003loc" data-toggle="tab">数据报告</a>
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane" id="panel-00010003intro">
+            <div class="tab-pane active" id="panel-00010003intro">
                 <table border="1" width="100%">
 					<tr><td>林班</td><td>0001</td></tr>
                     <tr><td>小班</td><td>0003</td></tr>
@@ -259,7 +277,7 @@
                     <tr><td>百分比</td><td>0.00048</td></tr>
                 </table>
             </div>
-            <div class="tab-pane active" id="panel-00010003loc">
+            <div class="tab-pane" id="panel-00010003loc">
                <table border="1" width="100%">
                     <tr><th>ID</th><th>经纬度</th><th>范围</th><th>株树</th></tr>
 					<tr><td>1</td><td>114.1, 23.3</td><td>5m</td><td>1</td></tr>
@@ -275,15 +293,15 @@
 <div class="intro"  id="Cintro00020001" style="display:none">
     <div class="tabbable" id="tabs-00020001">
         <ul class="nav nav-tabs">
-            <li>
+            <li class="active">
                  <a href="#panel-00020001intro" data-toggle="tab">小班信息</a>
             </li>
-            <li class="active">
+            <li>
                  <a href="#panel-00020001loc" data-toggle="tab">数据报告</a>
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane" id="panel-00020001intro">
+            <div class="tab-pane active" id="panel-00020001intro">
                 <table border="1" width="100%">
 					<tr><td>林班</td><td>0002</td></tr>
                     <tr><td>小班</td><td>0001</td></tr>
@@ -312,7 +330,7 @@
                     <tr><td>百分比</td><td>0.00048</td></tr>
                 </table>
             </div>
-            <div class="tab-pane active" id="panel-00020001loc">
+            <div class="tab-pane" id="panel-00020001loc">
                <table border="1" width="100%">
                     <tr><th>ID</th><th>经纬度</th><th>范围</th><th>株树</th></tr>
 					<tr><td>1</td><td>114.2, 23.1</td><td>5m</td><td>1</td></tr>
@@ -328,15 +346,15 @@
 <div class="intro"  id="Cintro00020002" style="display:none">
     <div class="tabbable" id="tabs-00020002">
         <ul class="nav nav-tabs">
-            <li>
+            <li class="active">
                  <a href="#panel-00020002intro" data-toggle="tab">小班信息</a>
             </li>
-            <li class="active">
+            <li>
                  <a href="#panel-00020002loc" data-toggle="tab">数据报告</a>
             </li>
         </ul>
         <div class="tab-content">
-            <div class="tab-pane" id="panel-00020002intro">
+            <div class="tab-pane active" id="panel-00020002intro">
                 <table border="1" width="100%">
 					<tr><td>林班</td><td>0002</td></tr>
                     <tr><td>小班</td><td>0002</td></tr>
@@ -365,7 +383,7 @@
                     <tr><td>百分比</td><td>0.00048</td></tr>
                 </table>
             </div>
-            <div class="tab-pane active" id="panel-00020002loc">
+            <div class="tab-pane" id="panel-00020002loc">
                <table border="1" width="100%">
                     <tr><th>ID</th><th>经纬度</th><th>范围</th><th>株树</th></tr>
 					<tr><td>1</td><td>114.2, 23.2</td><td>5m</td><td>1</td></tr>
