--- a/soshine/templates/somap.html
+++ b/soshine/templates/somap.html
@@ -50,7 +50,7 @@
             expandZoomRange: true,
             zooms: [3,20]
         });
-        map.setMapStyle("dark");
+        map.setMapStyle("light");
         AMapUI.loadUI(['control/BasicControl'], function(BasicControl) {
             //缩放控件，显示Zoom值
             map.addControl(new BasicControl.Zoom({
