--- a/soshine/templates/DataDiv.html
+++ b/soshine/templates/DataDiv.html
@@ -4,8 +4,42 @@
              <h3 class="Bar-name">{{ abc_name }}数据</h3>
         </div>
         {%  include 'LayerDiv.html' %}
-
-
+        <div class="intro">
+            <h4>数据显示示例</h4>
+            <table border="1" width="100%">
+                <tr><th>ID</th><th>经纬度</th><th>范围</th><th>株树</th></tr>
+                <tr><td>1</td><td>114.1231 23.2</td><td>5m</td><td>1</td></tr>
+                <tr><td>2</td><td>114.21998, 23.12268</td><td>20m</td><td>3</td></tr>
+                <tr><td>3</td><td>114.12458, 23.14527</td><td>10m</td><td>3</td></tr>
+                <tr><td>4</td><td>114.24527, 23.312268</td><td>10m</td><td>3</td></tr>
+                <tr><td>5</td><td>114.25272, 23.47820</td><td>25m</td><td>4</td></tr>
+                <tr><td>6</td><td>114.17128, 23.32458</td><td>40m</td><td>9</td></tr>
+                <tr><td>7</td><td>114.110527, 23.27821</td><td>20m</td><td>3</td></tr>
+                <tr><td>8</td><td>114.21201, 23.27820</td><td>10m</td><td>1</td></tr>
+                <tr><td>9</td><td>114.17250, 23.312268</td><td>50m</td><td>12</td></tr>
+                <tr><td>10</td><td>114.27821, 23.212268</td><td>10m</td><td>4</td></tr>
+                <tr><td>11</td><td>114.17820, 23.12458</td><td>20m</td><td>3</td></tr>
+                <tr><td>12</td><td>114.21010, 23.3727</td><td>15m</td><td>4</td></tr>
+                <tr><td>13</td><td>114.2727, 23.212268</td><td>6m</td><td>2</td></tr>
+                <tr><td>14</td><td>114.2722, 23.34527</td><td>9m</td><td>3</td></tr>
+                <tr><td>15</td><td>114.1727, 23.2727</td><td>20m</td><td>5</td></tr>
+                <tr><td>1</td><td>114.1231 23.2</td><td>5m</td><td>1</td></tr>
+                <tr><td>16</td><td>114.21998, 23.12268</td><td>20m</td><td>3</td></tr>
+                <tr><td>17</td><td>114.12458, 23.14527</td><td>10m</td><td>3</td></tr>
+                <tr><td>18</td><td>114.24527, 23.312268</td><td>10m</td><td>3</td></tr>
+                <tr><td>19</td><td>114.25272, 23.47820</td><td>25m</td><td>4</td></tr>
+                <tr><td>20</td><td>114.17128, 23.32458</td><td>40m</td><td>9</td></tr>
+                <tr><td>21</td><td>114.110527, 23.27821</td><td>20m</td><td>3</td></tr>
+                <tr><td>22</td><td>114.21201, 23.27820</td><td>10m</td><td>1</td></tr>
+                <tr><td>23</td><td>114.17250, 23.312268</td><td>50m</td><td>12</td></tr>
+                <tr><td>24</td><td>114.27821, 23.212268</td><td>10m</td><td>4</td></tr>
+                <tr><td>25</td><td>114.17820, 23.12458</td><td>20m</td><td>3</td></tr>
+                <tr><td>26</td><td>114.21010, 23.3727</td><td>15m</td><td>4</td></tr>
+                <tr><td>27</td><td>114.2727, 23.212268</td><td>6m</td><td>2</td></tr>
+                <tr><td>28</td><td>114.2722, 23.34527</td><td>9m</td><td>3</td></tr>
+                <tr><td>29</td><td>114.1727, 23.2727</td><td>20m</td><td>5</td></tr>
+            </table>
+        </div>
 
     </div>
     <div id="dataToggle" class="ToggleLogoleftArrow">
