--- a/soshine/templates/somap.html
+++ b/soshine/templates/somap.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
-	<title>设置地图显示范围</title>
+	<title>{{ abc_name }}</title>
 
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
