--- a/soshine/templates/ABClistDiv.html
+++ b/soshine/templates/ABClistDiv.html
@@ -315,7 +315,7 @@
     <div id="panel-element-demo-Boluo" class="panel-collapse collapse">
         <div class="blocklist-heading">
             <a href="{% url 'soshine:somap' 50001 %}"><span id="Demo_Area_Boluo_A" class="glyphicon glyphicon-fullscreen" onclick=""></span></a>
-            <span id="Demo_Block_Boluo_A_outline" onclick="change_intro('BL_0001')">博罗县罗阳镇示例林班0001</span>
+            <span id="Demo_Block_Boluo_A_outline" onclick="change_intro('BL_0001')">博罗县罗阳镇示例林业区域甲</span>
             <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
                   data-target="#panel-element-demo-Boluo_A" style="float: right" ></span>
 
@@ -338,7 +338,7 @@
         <!--地块列表|博罗县罗阳镇细2-2块-->
         <div class="blocklist-heading">
             <a href="{% url 'soshine:somap' 50002 %}"><span id="Demo_Area_Boluo_B" class="glyphicon glyphicon-fullscreen" onclick=""></span></a>
-            <span id="Demo_Block_Boluo_B_outline" onclick="change_intro('BL_0002')">博罗县罗阳镇示例林班0002</span>
+            <span id="Demo_Block_Boluo_B_outline" onclick="change_intro('BL_0002')">博罗县罗阳镇示例林业区域乙</span>
             <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
                   data-target="#panel-element-demo-Boluo_B" style="float: right" ></span>
         </div>
