--- a/soshine/templates/ABClistDiv.html
+++ b/soshine/templates/ABClistDiv.html
@@ -351,6 +351,10 @@
                 <a href="{% url 'soshine:somap' 500020002 %}" target="_blank"><span id="Demo_Comprt_Boluo_B_02_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
                 <span id="Demo_Comprt_Boluo_B_02_loc" style="cursor: pointer" onclick="change_intro('BL_0002_0002')">示例林班0002小班0002</span>
             </div>
+            <div id="Demo_Comprt_Boluo_B_03" class="Blockname panel-body">
+                <a href="{% url 'soshine:somap' 500020003 %}" target="_blank"><span id="Demo_Comprt_Boluo_B_03_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <span id="Demo_Comprt_Boluo_B_03_loc" style="cursor: pointer" onclick="change_intro('BL_0002_0003')">示例林班0002小班0003</span>
+            </div>
         </div>
 
     </div>
