--- a/soshine/templates/sogis.html
+++ b/soshine/templates/sogis.html
@@ -333,55 +333,104 @@
         var area_BL = [[BL_W, BL_N],[BL_E, BL_N], [BL_E, BL_S],[BL_W, BL_S]];
 
         var block_BL_0001 = [
-                []
+            [114.19917, 23.12386], [114.20036, 23.12356],[114.2005, 23.12392],[114.20213, 23.12321],
+            [114.20105, 23.12264],[114.20111, 23.12221],[114.20105, 23.12193],[114.20047, 23.12205],
+            [114.19852, 23.12118],[114.19821, 23.1218],[114.19857, 23.12234]
         ];
         var block_BL_0002 = [
-            [114.19144, 23.13209],
-            [114.19407, 23.13109],
-            [114.19512, 23.12992],
-            [114.19284, 23.1268],
-            [114.19198, 23.12645]
+             [114.19163, 23.12834],[114.19144, 23.13209], [114.19407, 23.13109], [114.19512, 23.12992],
+            [114.19273, 23.12677], [114.19208, 23.12647]
         ];
+        var block_BL_0002_warn1 = [
+            //warn1
+            [114.19362, 23.13002],
+            [114.1941, 23.12996],
+            [114.19416, 23.12984],
+            [114.19379, 23.12989]
+        ];
+        var block_BL_0002_warn2 = [
+            //warn2
+            [114.19453, 23.13],
+            [114.19474, 23.12991],
+            [114.19466, 23.12979],
+            [114.1945, 23.12992]
+        ];
+        var block_BL_0002_warn3 = [
+            //warn3
+            [114.19257, 23.12829],
+            [114.19306, 23.12841],
+            [114.19334, 23.12833],
+            [114.19292, 23.12827]
+        ];
+        var block_BL_0002_ng1 = [
+            //notgood1
+            [114.19244, 23.13006],
+            [114.19292, 23.13029],
+            [114.19295, 23.12972],
+            [114.19262, 23.1296]
+        ];
+        var block_BL_0002_ng2 = [
+            //notgood2
+            [114.19201, 23.12793],
+            [114.19265, 23.12793],
+            [114.19222, 23.12758]
+        ];
+
+        var block_BL_0001_warn1 = [
+            //warn1
+            [114.19954, 23.12285],
+            [114.19993, 23.12283],
+            [114.1997, 23.1227]
+        ];
+        var block_BL_0001_warn2 = [
+            [114.20078, 23.12323],
+            [114.2011, 23.12322],
+            [114.20096, 23.12302]
+        ];
+        var block_BL_0001_warn3 = [
+            //warn3
+            [114.19257, 23.12829],
+            [114.19306, 23.12841],
+            [114.19334, 23.12833],
+            [114.19292, 23.12827]
+        ];
+        var block_BL_0001_ng1 = [
+            //notgood1
+            [114.19974, 23.12343],
+            [114.20059, 23.12316],
+            [114.20021, 23.12289],
+            [114.19987, 23.12308]
+        ];
+        var block_BL_0001_ng2 = [
+            //notgood2
+            [114.19935, 23.12244],
+            [114.20003, 23.12227],
+            [114.19943, 23.12211]
+        ];
+
 	    var Comprt_BL_00010001 = [
-            [114.19974, 23.12347],
-            [114.20036, 23.12356],
-            [114.2005, 23.12392],
-            [114.20213, 23.12321],
-            [114.20105, 23.12264],
-            [114.19989, 23.12287]
+            [114.19974, 23.12347], [114.20036, 23.12356], [114.2005, 23.12392], [114.20213, 23.12321],
+            [114.20105, 23.12264], [114.19989, 23.12287]
 		];
         var Comprt_BL_00010002 = [
-            [114.19989, 23.12287],
-            [114.20105, 23.12264],
-            [114.20111, 23.12221],
-            [114.20105, 23.12193],
-            [114.20047, 23.12205],
-            [114.19982, 23.12235]
+            [114.19989, 23.12287], [114.20105, 23.12264], [114.20111, 23.12221], [114.20105, 23.12193],
+            [114.20047, 23.12205], [114.19982, 23.12235]
 
 		];
         var Comprt_BL_00010003 = [
-            [114.1982, 23.1218],
-            [114.19857, 23.12234],
-            [114.19982, 23.12235],
-            [114.20047, 23.12205],
-            [114.19852, 23.12118]
+            [114.1982, 23.1218], [114.19857, 23.12234], [114.19982, 23.12235], [114.20047, 23.12205], [114.19852, 23.12118]
 
 		];
         var Comprt_BL_00020001 = [
-            [114.19189, 23.12921],
-            [114.19278, 23.12945],
-            [114.19372, 23.12843],
-            [114.19216, 23.12827]
+            [114.19189, 23.12921], [114.19278, 23.12945], [114.19372, 23.12843], [114.19216, 23.12827]
         ];
         var Comprt_BL_00020002 = [
-            [114.19163, 23.12834],
-            [114.19216, 23.12827],
-            [114.19372, 23.12843],
-            [114.19288, 23.12779],
-            [114.19295, 23.12729],
-            [114.19259, 23.12709],
-            [114.19273, 23.12677],
-            [114.19208, 23.12647]
+            [114.19163, 23.12834], [114.19216, 23.12827], [114.19372, 23.12843], [114.19288, 23.12779],
+            [114.19295, 23.12729], [114.19259, 23.12709], [114.19273, 23.12677], [114.19208, 23.12647]
+        ];
+        var Comprt_BL_00020003 = [
+            [114.19354, 23.12983], [114.19365, 23.13013], [114.19442, 23.13009], [114.19512, 23.12992],
+            [114.19444, 23.12902]
         ];
 
         var area_ZJK=[
@@ -528,6 +577,24 @@
                 color: [255, 0, 0, 0.5],
                 outline: {
                     color: [255, 0, 0],
+                    width: 5
+                }
+            });
+            var temp_polygon_block = new Polygon({
+                rings: [cur_block]
+            });
+            var temp_polygonGraphic_block = new Graphic({
+                geometry: temp_polygon_block,
+                symbol: fillSymbol_block_warn
+            });
+
+            mainView.graphics.add(temp_polygonGraphic_block);
+        }
+        function add_polygon_block_ng(cur_block){
+            var fillSymbol_block_warn = new SimpleFillSymbol({
+                color: [255, 255, 0, 0.5],
+                outline: {
+                    color: [255, 255, 0],
                     width: 5
                 }
             });
@@ -975,15 +1042,24 @@
 
         on(dojo.query("#Demo_Area_Boluo_loc"), "click", function() {
             mainView.goTo({position: [114.197,23.0752,2000], heading: 0, tilt: 70});
-            add_polygon_area(area_BL);
+            add_polygon_block(area_BL);
         });
 		on(dojo.query("#Demo_Block_Boluo_A_outline"), "click", function() {
             mainView.goTo({position: [114.19026, 23.12347,500], heading: 90, tilt: 70});
             add_polygon_block(block_BL_0001);
+            add_polygon_block_warn(block_BL_0001_warn1);
+            add_polygon_block_warn(block_BL_0001_warn2);
+            add_polygon_block_ng(block_BL_0001_ng1);
+            add_polygon_block_ng(block_BL_0001_ng2);
         });
         on(dojo.query("#Demo_Block_Boluo_B_outline"), "click", function() {
             mainView.goTo({position: [114.20142, 23.12236,500], heading: 305, tilt: 70});
             add_polygon_block(block_BL_0002);
+            add_polygon_block_warn(block_BL_0002_warn1);
+            add_polygon_block_warn(block_BL_0002_warn2);
+            add_polygon_block_warn(block_BL_0002_warn3);
+            add_polygon_block_ng(block_BL_0002_ng1);
+            add_polygon_block_ng(block_BL_0002_ng2);
         });
 
         on(dojo.query("#Demo_Comprt_Boluo_A_01_loc"), "click", function() {
@@ -1026,6 +1102,17 @@
             add_ill_tree(114.19176, 23.12826);
             add_ill_tree(114.19192, 23.12826);
             add_ill_tree(114.19213, 23.1282);
+        });
+        on(dojo.query("#Demo_Comprt_Boluo_B_03_loc"), "click", function() {
+            mainView.goTo({position: [114.19417, 23.12981 ,500], heading: 0, tilt: 0});
+            add_polygon_comprt(block_BL_0002,Comprt_BL_00020003,"博罗县罗阳镇","B","03");
+            show_comprt_info('B03');
+            add_ill_tree(114.19393, 23.12998);
+            add_ill_tree(114.19415, 23.12978);
+            add_ill_tree(114.19452, 23.12952);
+            add_ill_tree(114.19461, 23.12989);
+            add_ill_tree(114.1945, 23.12967);
+            add_ill_tree(114.19436, 23.12911);
         });
 
 
